@@ -1,3 +1,8 @@
+2015-01-08  kitone  <kitone@gna.org>
+
+	* plugins/actions/bestfit/bestfit.cc:
+	Fix bug #23151 : Using best fit subtitles on zero-length subtitles crashes subtitleeditor
+
 2015-01-05  kitone  <kitone@gna.org>
 
 	* src/we/waveformeditor.cc:
